# libzarr

./: .clang-format  .clang-tidy  .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  README.md  SKILL.md  handoff.md
.claude/: CLAUDE.md
.clusterfuzzlite/: Dockerfile  README.md  build.sh  project.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: cflite-cron.yml  cflite-pr.yml  ci.yml  conformance-latest.yml  pages.yml
bench/: .clang-tidy  bench.cpp
bench-build/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  libzarr_bench
bench-build/standalone/: libzarr_adapters_filesystem_store_hpp.cpp  libzarr_array_hpp.cpp  libzarr_codecs_blosc_hpp.cpp  libzarr_codecs_gzip_hpp.cpp  libzarr_codecs_hpp.cpp  libzarr_codecs_zstd_hpp.cpp  libzarr_group_hpp.cpp  libzarr_libzarr_hpp.cpp  libzarr_metadata_hpp.cpp  libzarr_sharding_hpp.cpp  libzarr_store_hpp.cpp  libzarr_types_hpp.cpp  libzarr_v2_hpp.cpp  libzarr_v3_hpp.cpp  libzarr_zip_hpp.cpp
cmake/: libzarrConfig.cmake.in
docs/: API.md  COMPATIBILITY.md  DESIGN.md  SPEC.md
examples/: archive.cpp  compression.cpp  custom_store.cpp  quickstart.cpp
fuzz/: .clang-tidy  fuzz_metadata.cpp  fuzz_shard_index.cpp  fuzz_zip.cpp  gen_seeds.py
fuzz/corpus/metadata/: typed_mismatch.json  v2_array.json  v3_array.json  v3_group_consolidated.json
include/libzarr/: array.hpp  codecs.hpp  group.hpp  libzarr.hpp  metadata.hpp  sharding.hpp  store.hpp  types.hpp  v2.hpp  v3.hpp  zip.hpp
include/libzarr/adapters/: filesystem_store.hpp
include/libzarr/detail/: common.hpp
ports/libzarr/: portfile.cmake  usage  vcpkg.json
tests/: .clang-tidy  conformance_tool.cpp  test_array.cpp  test_codecs.cpp  test_fs_store.cpp  test_sharding.cpp  test_store.cpp  test_v2_metadata.cpp  test_v3.cpp  test_zip.cpp  test_zstd_decode_only.cpp
tests/conformance/: read_back.py  read_zip.py  run_conformance.sh  write_fixtures.py  write_fixtures_v3.py  write_zip_fixture.py
tests/packaging/: CMakeLists.txt  consumer.cpp  run_packaging_test.sh
tests/wild/: README.md  SURVEY.md  nczarr.py  survey_urls.txt  tensorstore.py
tests/wild/gdal/: manifest.json
tests/wild/gdal/zarr_v2/: .zmetadata
tests/wild/gdal/zarr_v2/zarr_v2/: .zarray  .zattrs  0.0  0.1  0.2  0.3  1.0  1.1  1.2  1.3
tests/wild/gdal/zarr_v3/: zarr.json
tests/wild/gdal/zarr_v3/zarr_v3/: zarr.json
tests/wild/gdal/zarr_v3/zarr_v3/c/0/: 0  1  2  3
tests/wild/gdal/zarr_v3/zarr_v3/c/1/: 0  1  2  3
tests/wild/generate/: gdal.py
tests/wild/nczarr/nczarr_mode/: .zattrs
tests/wild/nczarr/nczarr_mode/data/: .zarray  .zattrs
tests/wild/nczarr/nczarr_mode/zipped/: .zarray  .zattrs
tests/wild/nczarr/zarr_mode/: .zattrs  manifest.json
tests/wild/nczarr/zarr_mode/data/: .zattrs
tests/wild/nczarr/zarr_mode/zipped/: .zattrs  0.0
tests/wild/ome_zarr/: .zattrs  manifest.json
tests/wild/ome_zarr/2/: .zarray
tests/wild/ome_zarr/2/0/0/0/: 0
tests/wild/ome_zarr/2/0/100/0/: 0
tests/wild/ome_zarr/2/1/235/0/: 0
tests/wild/ome_zarr/2/1/50/0/: 0
tests/wild/tensorstore/: manifest.json
tests/wild/tensorstore/v2_blosc/: .zarray  0.0  0.1  1.0  1.1  2.0  2.1
tests/wild/tensorstore/v2_gzip/: .zarray  0.0  0.1  1.0  1.1  2.0  2.1
tests/wild/tensorstore/v3_sharded/: zarr.json
tests/wild/tensorstore/v3_sharded/c/0/: 0  1
tests/wild/tensorstore/v3_sharded/c/1/: 0  1
tests/wild/tensorstore/v3_zstd/: zarr.json
tests/wild/tensorstore/v3_zstd/c/0/: 0  1
tests/wild/tensorstore/v3_zstd/c/1/: 0  1
tests/wild/tensorstore/v3_zstd/c/2/: 0  1
tools/: amalgamate.py  api_inventory.py  fetch_dataset.py  make_wild_manifest.py  survey.py  update_vendored.sh
